Updated portfolio for new experiences and fixed bug where footer was displaying too tall on screen

--- a/src/css/Experience.css
+++ b/src/css/Experience.css
@@ -8,6 +8,10 @@
 .experience-header {
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    display: flex;
 }
 
 .experience-card {
